--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1034</width>
-    <height>699</height>
+    <height>749</height>
    </rect>
   </property>
   <property name="mouseTracking">
@@ -1076,7 +1076,7 @@ border-radius: 4px;
              <x>0</x>
              <y>0</y>
              <width>321</width>
-             <height>431</height>
+             <height>481</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1209,7 +1209,7 @@ border-radius: 4px;
               <number>10</number>
              </property>
              <property name="pageStep">
-              <number>5</number>
+              <number>10</number>
              </property>
              <property name="value">
               <number>100</number>
@@ -1222,6 +1222,9 @@ border-radius: 4px;
              </property>
              <property name="invertedControls">
               <bool>false</bool>
+             </property>
+             <property name="tickInterval">
+              <number>10</number>
              </property>
             </widget>
            </item>
