--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1345,6 +1345,9 @@ border-radius: 4px;
               </item>
               <item>
                <widget class="QPushButton" name="fullPreviewButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="maximumSize">
                  <size>
                   <width>128</width>
@@ -1628,7 +1631,14 @@ border-radius: 4px;
     <addaction name="separator"/>
     <addaction name="exportAction"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -1669,6 +1679,14 @@ border-radius: 4px;
    </property>
    <property name="toolTip">
     <string>Create a new Sprite!</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
